--- a/tasks/src/main/resources/application.properties
+++ b/tasks/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8080
 spring.datasource.url=jdbc:mysql://localhost:3306/tasks
 spring.datasource.username=root
 spring.datasource.password=rgbiuli1
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
